Add dirty implementation for creating android emulator and install apk

--- a/src/UITest.Appium/UITest.Appium.csproj
+++ b/src/UITest.Appium/UITest.Appium.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UITest.Core\UITest.Core.csproj" />
+    <ProjectReference Include="..\UITest.Simulator\UITest.Simulator.csproj" />
   </ItemGroup>
 
 </Project>
